; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_v4l2-ioctl.c_video_fix_command.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_v4l2-ioctl.c_video_fix_command.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VIDIOC_OVERLAY = common dso_local global i32 0, align 4
@VIDIOC_S_PARM = common dso_local global i32 0, align 4
@VIDIOC_S_CTRL = common dso_local global i32 0, align 4
@VIDIOC_G_AUDIO = common dso_local global i32 0, align 4
@VIDIOC_G_AUDOUT = common dso_local global i32 0, align 4
@VIDIOC_CROPCAP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @video_fix_command to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @video_fix_command(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  switch i32 %3, label %16 [
    i32 130, label %4
    i32 128, label %6
    i32 129, label %8
    i32 132, label %10
    i32 131, label %12
    i32 133, label %14
  ]

4:                                                ; preds = %1
  %5 = load i32, i32* @VIDIOC_OVERLAY, align 4
  store i32 %5, i32* %2, align 4
  br label %16

6:                                                ; preds = %1
  %7 = load i32, i32* @VIDIOC_S_PARM, align 4
  store i32 %7, i32* %2, align 4
  br label %16

8:                                                ; preds = %1
  %9 = load i32, i32* @VIDIOC_S_CTRL, align 4
  store i32 %9, i32* %2, align 4
  br label %16

10:                                               ; preds = %1
  %11 = load i32, i32* @VIDIOC_G_AUDIO, align 4
  store i32 %11, i32* %2, align 4
  br label %16

12:                                               ; preds = %1
  %13 = load i32, i32* @VIDIOC_G_AUDOUT, align 4
  store i32 %13, i32* %2, align 4
  br label %16

14:                                               ; preds = %1
  %15 = load i32, i32* @VIDIOC_CROPCAP, align 4
  store i32 %15, i32* %2, align 4
  br label %16

16:                                               ; preds = %1, %14, %12, %10, %8, %6, %4
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
